# ficon

./: .gitignore  .travis.yml  Cargo.toml  Dockerfile  Ficon.toml  LICENSE  README.md  docker_push  ficon.toml
src/: lib.rs  main.rs
