[package]
name = "ficon"
version = "0.1.0"
authors = ["Supanat Pothivarakorn <supanat.ptk@gmail.com>"]
edition = "2018"
homepage = "https://github.com/iboss-ptk/ficon"
repository = "https://github.com/iboss-ptk/ficon"
description = "File and folder convention checker written in rust "
license = "MIT"

[dependencies]
structopt = "0.2"
termion = "1.5"
failure = "0.1"
exitfailure = "0.5"
glob = "0.3"
ignore = "0.4"
regex = "1.1"
exitcode = "1.1.2"
toml = "0.4"
serde = "1.0"
serde_derive = "1.0"
human-panic = "1.0.1"